# MorseCodeTranslator

./: CMakeLists.txt  README.md  convertToMorseCode.c  convertToMorseCode.h  convertToMorseCode.js  convertToMorseCode.wasm  convertToMorseCodeForJS.c  getUserInput.c  getUserInput.h  index.html  main.c  outputBeep.c  outputBeep.h  outputMorseCode.c  script.js
